Bug 621987 - unary - applied to unsigned var in ConvertImage - r=vlad, a=joe